# AI-strategies-papers-regulations-monitoring

./: .dockerignore  .env.example  .gitignore  .lfsconfig  .pre-commit-config.yaml  Dockerfile  Dockerfile_common  EDA_report.txt  README.md  airflow_secrets.env.example  annotation.py  app.py  app2.py  arango_secrets.env.example  clusters_vis.py  docker-compose.yml  dvc.yaml  install_prerequirements.sh  pyproject.toml  reporting_app.py  setup_eden.sh  visualise_memes.py  webdav_secrets.env.example
.dvc/: config
airflow/: Dockerfile  default.dag.py
annotation/: Dockerfile
arango/: Dockerfile
data/: .gitignore  RDAP-Export-03-06-2021.tar.gz.dvc  W00_dataset.dvc  ethics-ai-table.dvc  jobin2019.csv.dvc  labels.csv.dvc  labels_hagendorffEthicsAIEthics2020.csv.dvc  mag0.zip.dvc  oecd_html.dvc
excel/: count_language.xlsx  stats.xlsx
log_dir/: 2021-07-30_18-00-02.662148.html  2021-07-30_18-07-27.225393.html  2021-07-30_18-13-24.383121.html  2021-07-30_18-14-38.185953.html  2021-07-30_18-15-58.909847.html
mair/: definition_extraction.py  logging.py  oecd_downloading.py  sentence_embeddings.py  sentences_splitting.py  similarity_calculation.py  utils.py  web_search.py
mars/: config.py  db.py  db_fields.py  definition_model.py  document_definition_scoring.py  embedding_types.py  embeddings.py  fetch_documentation.py  jobs.py  keyword_topic_model.py  language_recognition.py  logging.py  oecd_downloading.py  parse_specific_files.py  parser.py  pdf_segmentation.py  scraper.py  search.py  sentence_definition_scoring.py  sentence_embeddings.py  sentences_splitting.py  similarity_calculation.py  storage.py  target_embeddings.py  utils.py  web_search.py
models/: .gitignore  definitions.dvc  distilbert-base-uncased.dvc  ethics_ai_ethics_laser_model.pkl.dvc  keyword_topic_model.py  labse2.dvc  lda_model-500_num-topics-50  tokenizers.dvc  universal-sentence-encoder-cmlm_multilingual-preprocess_2.dvc
reporting_app/: Dockerfile
results/: topic_modelling_overton_first_results.txt  vis-100_num-topics-50.html  vis-500_num-topics-50.html  vis-5_num-topics-10.html
rq_worker/: Dockerfile  app.py
scraper/: Api.py  script.py  utils.py
scrapers/: Dockerfile  default.dag.py  eurlex-scraping.py  oecd-scraping.py
scripts/: assign_languages_to_sections.py  cluster_visualisation_cpu.py  clusters_visualisation.py  create_openalex_dataset.py  create_openalex_subset.py  definition_data_generation.py  download_s2orc_incrementally.py  embedd-sentences.py  embedd_all_sents.py  embedd_sentences.py  eurlex-metadata-scraping.py  eurlex-scraping.py  extract_definitions.py  get_papers.py  meme_score.py  oecd-scraping.py  parse-dir.py  parse_jobin2019.py  patterns.py  prepare_analytics_table.py  prepare_annotation_data.py  s2orc-download.py  score_for_annotation.py  score_processed_documents.py  segment_pdf.py  segment_pdf_and_html.py  split-to-sentences.py  split_to_sentences.py  train_definition_transformer.py
secrets/: airflow.env.example  arango.env.example  redis.conf.example  redis.env.example
tests/: .gitignore  (+12 more)
(+372 files in other folders)
