[tool.poetry]
name = "mars"
version = "0.1.0"
description = "Monitoring Artificial inteligence Regulations, Strategies and papers"
authors = ["Hanna Zdulska <zdula616@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
dvc = {extras = ["gs"], version = "^2.5.0"}
spacy = "^3.0.6"
pyArango = "^1.3.5"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
