[tool.poetry]
name = "mars"
version = "0.1.0"
description = "Monitoring Artificial inteligence Regulations, Strategies and papers"
authors = ["Hanna Zdulska <zdula616@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "==3.7.1"
dvc = {extras = ["gs"], version = "^2.5.0"}
spacy = "^3.0.6"
pandas = "^1.3.0"
newspaper3k = "^0.2.8"
matplotlib = "^3.4.2"
Cython = ">=0.21.1"
ftfy = ">=4.1.0,<5.0.0"
lxml = ">=4.2.3"
numpy = ">=1.11.0"
pytest = ">=4.0.0"
pytest-cov = ">=2.6.0"
scikit-learn = ">=0.15.2,<0.21.0"
scipy = ">=0.17.0"
dragnet = "^2.0.4"
jupyter = "^1.0.0"
urllib3 = "^1.26.6"
ipykernel = "^6.0.2"
selenium = "^3.141.0"
pyArango = "^1.3.5"
python-dotenv = "^0.19.0"
python-magic = "^0.4.24"
pdfminer = "^20191125"
timeunit = "^1.1.0"
cached-property = "^1.5.2"
isort = "^5.9.3"
html-parser = "^0.2"
tensorflow-hub = "^0.12.0"
tensorflow = "^2.5.0"
tensorflow-text = "^2.5.0"
laserembeddings = "^1.1.1"
seaborn = "^0.11.2"
python-arango = "^7.2.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"
black = "^21.6b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
