[tool.poetry]
name = "mars"
version = "0.1.0"
description = "Monitoring Artificial inteligence Regulations, Strategies and papers"
authors = ["Hanna Zdulska <zdula616@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
dvc = {extras = ["azure"], version = "^2.5.0"}
spacy = "^3.0.6"
pandas = "^1.3.0"
newspaper3k = "^0.2.8"
matplotlib = "^3.4.2"
lxml = ">=4.2.3"
numpy = ">=1.11.0"
pytest = ">=4.0.0"
jupyter = "^1.0.0"
urllib3 = "^1.26.6"
ipykernel = "^6.0.2"
pdfminer = "^20191125"
seaborn = "^0.11.2"
jupyter-core = "^4.7.1"
semanticscholar = "^0.1.6"
jupyter-contrib-nbextensions = "^0.5.1"
pip = "^21.2.4"
google = "^3.0.0"
gsearch = "^1.6.0"
duckduckpy = "^0.2"
streamlit = "^0.87.0"
bs4 = "^0.0.1"
spacy-langdetect = "^0.1.2"
scikit-learn = "^1.0"
torch = "^1.10.0"
transformers = "^4.12.3"
pke = {git = "https://github.com/boudinfl/pke.git"}
textacy = "^0.12.0"
sentence-transformers = "^2.2.0"
hdbscan = "^0.8.28"
ujson = "^5.3.0"
plotly = "^5.8.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"
flake8 = "^3.9.2"
rope = "^0.19.0"
isort = "^5.9.3"
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry2conda]
name = "mair"

